// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/lookup .lookupUpdates() disables major release separation (major) 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() disables major release separation (minor) 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles PEP440 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.9.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.4",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles github 404 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency foo",
    "type": "warning",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles prerelease jumps 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.9.0-rc",
    "isRange": true,
    "newMajor": 2,
    "newMinor": 9,
    "newValue": "^2.9.1-insiders.20180516",
    "repositoryUrl": "https://github.com/Microsoft/TypeScript",
    "toVersion": "2.9.1-insiders.20180516",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles pypi 404 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency foo",
    "type": "warning",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles unknown purl 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() ignores pinning for ranges when other upgrade exists 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() pins minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.4.1",
    "type": "pin",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() rejects complex range in-range updates 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects in-range unsupported operator 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects non-fully specified in-range updates 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects reverse ordered less than greater than 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() replaces major complex ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^3.0.0",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() replaces minor complex ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() replaces non-range in-range updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns both updates if automerging minor 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns minor update if automerging both patch and minor 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns minor update if separate patches not configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if automerging 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if automerging major 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if grouping 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch minor and major 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "newMajor": 0,
    "newMinor": 8,
    "newValue": "0.8.12",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.8.12",
    "type": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch update if automerging patch 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch update if separateMinorPatch 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "patch",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns rollback for pinned version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newMajor": 0,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "semanticCommitType": "fix",
    "type": "rollback",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.99",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns rollback for ranged version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newMajor": 0,
    "newValue": "^0.9.7",
    "semanticCommitType": "fix",
    "type": "rollback",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should allow unstable versions if the current version is unstable 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.3.0-beta.1",
    "newMajor": 2,
    "newMinor": 5,
    "newValue": "2.5.17-beta.0",
    "repositoryUrl": "https://github.com/vuejs/vue",
    "toVersion": "2.5.17-beta.0",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should allow unstable versions if the ignoreUnstable=false 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.5.16",
    "newMajor": 2,
    "newMinor": 5,
    "newValue": "2.5.17-beta.0",
    "repositoryUrl": "https://github.com/vuejs/vue",
    "toVersion": "2.5.17-beta.0",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should downgrade from missing versions 1`] = `
Object {
  "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newMajor}}}.x",
  "commitMessageAction": "Roll back",
  "isRollback": true,
  "newMajor": 1,
  "newValue": "1.16.0",
  "semanticCommitType": "fix",
  "type": "rollback",
}
`;

exports[`manager/npm/lookup .lookupUpdates() should treat zero zero caret ranges as pinned 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.0.34",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 0,
    "newValue": "^0.0.35",
    "repositoryUrl": "https://github.com/DefinitelyTyped/DefinitelyTyped",
    "toVersion": "0.0.35",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports > latest versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.4.1",
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "2.0.3",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "2.0.3",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex major hyphen ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x - 3.x",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^1.0.0 || ^2.0.0 || ^3.0.0",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex ranges 1`] = `
Object {
  "canBeUnpublished": false,
  "fromVersion": "0.8.12",
  "isRange": true,
  "newMajor": 0,
  "newMinor": 9,
  "newValue": "^0.7.0 || ^0.8.0 || ^0.9.0",
  "repositoryUrl": "https://github.com/kriskowal/q",
  "toVersion": "0.9.7",
  "type": "minor",
}
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex tilde ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.2.0 || ~1.3.0 || ~1.4.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range caret updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range gte updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">=1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range tilde updates 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports minor and major upgrades for ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports minor and major upgrades for tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.4.4",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x complex minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.2.x - 1.4.x",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x major ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.x",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x minor ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.x",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.4.1",
    "isRange": true,
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "<= 2",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "2.0.3",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal minor ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "<= 0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than major ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.1",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "< 0.9.8",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.1",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 1.4.2",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 < 2.0.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major less than equal ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2.0.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor greater than less than equals ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <= 0.9.7",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.8.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <= 1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <0.10",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <1.5",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.1",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades multiple caret ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "^0.9.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.0.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades multiple tilde ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "~0.9.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.7.2",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades shorthand major ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "0.9.7",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades shorthand minor ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades tilde ranges without pinning 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() uses the locked version for pinning 1`] = `
Array [
  Object {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
  },
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.0.0",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens .x OR ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x || 2.x || 3.x",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens major ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^2.0.0 || ^3.0.0",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens minor ranged versions if configured 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "1.3.0",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.3.0 || ~1.4.0",
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens stanndalone major OR ranges 1`] = `
Array [
  Object {
    "canBeUnpublished": false,
    "fromVersion": "2.7.0",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1 || 2 || 3",
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
  },
]
`;
